Issue #8536 : Keep the blanket rule as a name when a rule narrows
A narrowed rule takes the finding's rule id, so the rule that covers every
remark stopped naming it. A suppression or a baseline entry written against
HOP-CHECK before the project named that check then quietly stopped applying:
naming one check brought back findings the project had already accepted. A
finding now answers to the narrowed id, its own error code and the blanket
rule, in that order.

Also repoint the hops in integration test 0002 at its own action. They were
copied from 0001 and named an action this workflow does not have, so Start had
no outgoing hop and the assertions never ran.